Changed app/java settings, reorganized NemoApp.scala into NemoApp and NemoTable files.